--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
   <main>
+
+    <!-- HEADER -->
+
     <header>
       <nav class="header-nav">
         <img class="header-logo" src="assets/images/logo.svg" alt="Logo of Sunnyside Agency.">
@@ -18,22 +21,23 @@
         </a>
         <div class="menu">
           <ul class="list-nav">
-            <li>About</li>
-            <li>Services</li>
-            <li>Projects</li>
-            <li class="contact-nav">Contact</li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Projects</a></li>
+            <li class="contact-nav"><a href="#">Contact</a></li>
           </ul>
         </div>
       </nav>
       <div class="title-sup">
         <h1>We are creatives</h1>
         <img class="title-arrow" src="assets/images/icon-arrow-down.svg" alt="Icon of an arrow.">
-        <!-- bg img ! -->
       </div>
     </header>
 
+    <!-- SECTION ARTICLES -->
+
     <section class="articles">
-      <article class="split-card">
+      <article class="split-card" id="card-1">
         <img id="split-card-1" src="" alt="Picture of an egg with a yellow background.">
         <div class="card-text">
           <h2>Transform your brand</h2>
@@ -45,7 +49,7 @@
         </div>
       </article>
 
-      <article class="split-card">
+      <article class="split-card" id="card-2">
         <img id="split-card-2" src="" alt="Picture of a pink glass with a pink background.">
         <div class="card-text">
           <h2>Stand out to the right audience</h2>
@@ -57,6 +61,8 @@
       </article>
     </section>
 
+    <!-- SECTION SERVICES -->
+    
     <section class="services">
       <div class="first-service">
         <div class="service-text">
@@ -66,7 +72,6 @@
           </p>
         </div>
       </div>
-      <!-- bg img ! -->
 
       <div class="second-service">
         <div class="service-text">
@@ -76,54 +81,60 @@
           </p>
         </div>
       </div>
-      <!-- bg img ! -->
     </section>
+
+    <!-- SECTION TESTIMONIALS -->
 
     <section class="testimonials">
       <h4>Client testimonials</h4>
-
+      <div class="testimonials-all">
       <div class="testimonial">
-        <img src="assets/images/image-emily.jpg" alt="Picture of Emily.">
-        <p class="testimonial-text"> 
-          We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-        </p>
-        <p class="testimonial-name">Emily R.</p>
-        <p class="testimonial-function">Marketing Director</p>
-      </div>
+          <img src="assets/images/image-emily.jpg" alt="Picture of Emily.">
+          <p class="testimonial-text"> 
+            We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
+          </p>
+          <p class="testimonial-name">Emily R.</p>
+          <p class="testimonial-function">Marketing Director</p>
+        </div>
 
-      <div class="testimonial">
-        <img src="assets/images/image-thomas.jpg" alt="Picture of Thomas.">
-        <p class="testimonial-text">
-          Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-        </p>
-        <p class="testimonial-name">Thomas S.</p>
-        <p class="testimonial-function">Chief Operating Officer</p>
-      </div>
+        <div class="testimonial">
+          <img src="assets/images/image-thomas.jpg" alt="Picture of Thomas.">
+          <p class="testimonial-text">
+            Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
+          </p>
+          <p class="testimonial-name">Thomas S.</p>
+          <p class="testimonial-function">Chief Operating Officer</p>
+        </div>
 
-      <div class="testimonial">
-        <img src="assets/images/image-jennie.jpg" alt="Picture of Jennie.">
-        <p class="testimonial-text">
-          Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-        </p>
-        <p class="testimonial-name">Jennie F.</p>
-        <p class="testimonial-function">Business Owner</p>
+        <div class="testimonial">
+          <img src="assets/images/image-jennie.jpg" alt="Picture of Jennie.">
+          <p class="testimonial-text">
+            Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+          </p>
+          <p class="testimonial-name">Jennie F.</p>
+          <p class="testimonial-function">Business Owner</p>
+        </div>
       </div>
     </section>
+
+    <!-- SECTION BLOC IMAGES -->
 
     <section class="bloc-images">
-      <img src="assets/images/mobile/image-gallery-milkbottles.jpg" alt="Picture of milk bottles with clouds in background.">
-      <img src="assets/images/mobile/image-gallery-orange.jpg" alt="Picture of half an orange in a plate with an orange background.">
-      <img src="assets/images/mobile/image-gallery-cone.jpg" alt="Picture of an ice cone on a blue background.">
-      <img src="assets/images/mobile/image-gallery-sugar-cubes.jpg" alt="Picture of sugar cubes on pink table and background.">
+      <img id="split-card-3" src="" alt="Picture of milk bottles with clouds in background.">
+      <img id="split-card-4" src="" alt="Picture of half an orange in a plate with an orange background.">
+      <img id="split-card-5" src="" alt="Picture of an ice cone on a blue background.">
+      <img id="split-card-6" src="" alt="Picture of sugar cubes on pink table and background.">
     </section>
+
+    <!-- FOOTER -->
 
     <footer>
       <img class="footer-logo" src="assets/images/logo-green.svg" alt="Logo of Sunnyside Agency.">
       <nav class="footer-nav">
         <ul>
-          <li>About</li>
-          <li>Services</li>
-          <li>Projects</li>
+          <li><a href="">About</a></li>
+          <li><a href="">Services</a></li>
+          <li><a href="">Projects</a></li>
         </ul>
       </nav>
       <div class="social-icons">
